creating a new page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Kaspars Verdens</title>
 </head>
 <body>
-    <h1>Hello, I can do it</h1>
-    <p>There will be a lot of running, and my experience</p>
+    <h1>Dziednieks</h1>
+    <p>There will be a lot of my own experience</p>
+
+    
     <footer>(c) 2020 KV edition</footer>
 </body>
 </html>
