add some new style

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaspars Verdens</title>
+    <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <title>Omnifood</title>
 </head>
-<body>
-    <h1>Dziednieks</h1>
-    <p>There will be a lot of my own experience</p>
+    <body>
+        <header>
+            <div class="hero-text-box">
+                <h1>Goodbye junk food. <br> Hello super healthy meals.</h1>
+                <a class="btn btn-full" href="#">I’m hungry</a>
+                <a class="btn btn-ghost" href="#">Show me more</a>
+                
 
-    
-    <footer>(c) 2020 KV edition</footer>
-</body>
+            </div>
+
+        </header>
+
+    </body>
+
+
 </html>
