--- a/index.html
+++ b/index.html
@@ -22,16 +22,11 @@
                         <li><a href="#">Sign up</a></li>
                     </ul>
                 </div>
-
-
-
             </nav>
             <div class="hero-text-box">
                 <h1>Goodbye junk food. <br> Hello super healthy meals.</h1>
                 <a class="btn btn-full" href="#">I’m hungry</a>
                 <a class="btn btn-ghost" href="#">Show me more</a>
-                
-
             </div>
 
         </header>
@@ -76,7 +71,7 @@
             </div>
         </section>
         <section class="section-meals">
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
                         <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -98,7 +93,7 @@
                     </figure>
                 </li>
             </ul>
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
                         <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
