--- a/index.html
+++ b/index.html
@@ -410,6 +410,8 @@
                     </div>
         </footer>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="resources/js/script.js"></script>
     </body>
 
 
